added Images, responsiveness

--- a/index.css
+++ b/index.css
@@ -1,5 +1,27 @@
 li{
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-end;
     list-style: none;
+}
+#list{
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: stretch;
+    gap: 70px;
+}
+.hidden{
+    display: none;
+}
+
+@media screen and (max-width: 1000px){
+    #cart{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    #checkout{
+        margin-top: 8rem;
+    }
 }
